chore: add clean script and ignore vscode workspace settings

--- a/docs/package.json
+++ b/docs/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "develop": "gatsby develop",
     "build": "gatsby build",
-    "serve": "gatsby serve"
+    "serve": "gatsby serve",
+    "clean": "gatsby clean"
   },
   "dependencies": {
     "gatsby": "^2.32.11",
